--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
   <meta name="description"
         content="Portfolio Architect specializing in Enterprise Architecture, Cloud (Azure & AWS), DevOps, and Solution Architecture. Leading cloud platform strategy, migration, and modernization." />
 
-  <!-- Fonts -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
+    /* =========================================================
+       1) DESIGN TOKENS (LIGHT DEFAULTS)
+       ========================================================= */
     :root{
-      --bg: #ffffff;
-      --text: #111827;        /* neutral-900 */
-      --subtext: #4b5563;     /* neutral-600 */
-      --accent: #0a66c2;      /* brand blue */
-      --border: #e5e7eb;      /* neutral-200 */
+      --header-height: 56px;       /* keep in sync with header padding/line-height */
+      --page-bg: #f5f6f8;          /* light gray page background */
+      --bg: #ffffff;               /* card/section white if needed */
+      --text: #111827;             /* neutral-900 */
+      --subtext: #4b5563;          /* neutral-600 */
+      --accent: #0a66c2;           /* brand blue */
+      --border: #e5e7eb;           /* neutral-200 */
       --shadow: 0 1px 0 var(--border);
       --focus: 2px solid #0a66c2;
 
@@ -28,24 +33,41 @@
       --header-text:  #ffffff;
     }
 
-    /* Respect system dark preference */
+    /* =========================================================
+       2) FOLLOW SYSTEM PREFERENCE BY DEFAULT
+          (Overridden by explicit user themes below)
+       ========================================================= */
     @media (prefers-color-scheme: dark){
       :root{
-        --bg: #0f172a;        /* slate-900 */
-        --text: #e5e7eb;      /* neutral-200 */
-        --subtext: #cbd5e1;   /* slate-300 */
-        --border: #1f2937;    /* gray-800 */
+        --page-bg: #0b1223;        /* subtle dark for page background */
+        --bg: #0f172a;             /* slate-900 */
+        --text: #e5e7eb;           /* neutral-200 */
+        --subtext: #cbd5e1;        /* slate-300 */
+        --border: #1f2937;         /* gray-800 */
         --shadow: 0 1px 0 var(--border);
 
-        /* Header gradient (dark) */
-        --header-start: #0ea5e9; /* sky-500 */
-        --header-end:   #7c3aed; /* violet-600 */
+        --header-start: #0ea5e9;   /* sky-500 */
+        --header-end:   #7c3aed;   /* violet-600 */
         --header-text:  #ffffff;
       }
     }
 
-    /* Explicit dark class overrides */
-    body.dark{
+    /* =========================================================
+       3) EXPLICIT USER THEME (ALWAYS WINS)
+       ========================================================= */
+    html.theme-light{
+      --page-bg: #f5f6f8;
+      --bg: #ffffff;
+      --text: #111827;
+      --subtext: #4b5563;
+      --border: #e5e7eb;
+      --shadow: 0 1px 0 var(--border);
+      --header-start: #0ea5e9;
+      --header-end:   #6366f1;
+      --header-text:  #ffffff;
+    }
+    html.theme-dark{
+      --page-bg: #0b1223;
       --bg: #0f172a;
       --text: #e5e7eb;
       --subtext: #cbd5e1;
@@ -56,16 +78,24 @@
       --header-text:  #ffffff;
     }
 
-    /* Base */
-    html{ scroll-behavior: smooth; }
+    /* =========================================================
+       4) BASE & SCROLL BEHAVIOR
+       ========================================================= */
+    html{
+      scroll-behavior: smooth;
+      /* This makes in-page anchors land below the sticky header. */
+      scroll-padding-top: var(--header-height);
+      /* For Safari iOS < 15 as a fallback, we also set scroll-margin on sections. */
+    }
     body{
       margin:0;
       font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, 'Helvetica Neue', Arial, sans-serif;
-      background-color: var(--bg);
+      background-color: var(--page-bg); /* ← light gray background for the whole page */
       color: var(--text);
       line-height: 1.7;
       transition: background-color .3s ease, color .3s ease;
     }
+
     a{ color: var(--accent); text-decoration: none; }
     a:hover{ text-decoration: underline; }
     a:focus-visible, button:focus-visible{ outline: var(--focus); outline-offset: 3px; }
@@ -82,26 +112,23 @@
       background: var(--bg); border: 1px solid var(--border); box-shadow: 0 4px 10px rgba(0,0,0,.08); z-index: 1000;
     }
 
-    /* Header with gradient */
+    /* =========================================================
+       5) HEADER (GRADIENT)
+       ========================================================= */
     header{
-      position: sticky;
-      top: 0;
-      z-index: 10;
+      position: sticky; top: 0; z-index: 10;
+      height: var(--header-height);
       color: var(--header-text);
       background-image: linear-gradient(90deg, var(--header-start), var(--header-end));
       box-shadow: 0 2px 10px rgba(0,0,0,.08);
     }
     .nav{
       display:flex; justify-content:space-between; align-items:center;
-      padding: 14px 20px; gap: 12px; flex-wrap: wrap;
+      padding: 0 20px; gap: 12px; flex-wrap: wrap; height: 100%;
     }
-    .brand{
-      font-weight: 700; font-size: 18px;
-      color: var(--header-text);
-    }
+    .brand{ font-weight: 700; font-size: 18px; color: var(--header-text); }
     .nav a{
-      color: var(--header-text); margin-left: 18px; font-size: 15px;
-      opacity:.95;
+      color: var(--header-text); margin-left: 18px; font-size: 15px; opacity:.95;
     }
     .nav a:hover{ opacity:1; text-decoration: underline; }
     .nav-controls{ display:flex; align-items:center; flex-wrap:wrap; }
@@ -113,7 +140,12 @@
       backdrop-filter: blur(6px);
     }
 
-    /* Hero */
+    /* =========================================================
+       6) CONTENT
+       ========================================================= */
+    /* Ensure sections also offset when targeted (helps older Safari) */
+    section[id]{ scroll-margin-top: calc(var(--header-height) + 10px); }
+
     .hero{
       display:flex; align-items:center; gap:30px; margin-top:30px; flex-wrap:wrap;
     }
@@ -129,7 +161,7 @@
     }
     p, ul{ font-size:17px; color: var(--subtext); max-width:720px; }
     .subtitle{ font-size:17px; color: var(--subtext); margin-bottom:18px; max-width:720px; }
-    .project,.blog-post{ margin-bottom:22px; max-width:720px; }
+    .project, .blog-post{ margin-bottom:22px; max-width:720px; }
 
     footer{
       margin-top:80px; padding-top:30px; border-top:1px solid var(--border);
@@ -138,8 +170,8 @@
 
     /* Mobile */
     @media (max-width: 600px){
-      .hero{ flex-direction:column; text-align:center; }
       h1{ font-size:32px; }
+      .hero{ flex-direction:column; text-align:center; }
       .nav a{ margin-left:12px; }
     }
   </style>
@@ -162,9 +194,8 @@
   </header>
 
   <main id="main" class="container">
-
     <section class="hero" aria-labelledby="name">
-      <img src="profile.webp" alt="Santhosh Kumar Chandrashekar" class="profile-pic" width="140" height="140" loading="lazy" decoding="async" />
+      <img src="assets/images/profile.webp" alt="Santhosh Kumar Chandrashekar" class="profile-pic" width="140" height="140" loading="lazy" decoding="async" />
       <div>
         <h1 id="name">Santhosh Kumar Chandrashekar</h1>
         <p class="subtitle">
@@ -181,8 +212,9 @@
     <section id="about" aria-labelledby="about-title">
       <h2 id="about-title">About</h2>
       <p>
-        With 14 years of experience in cloud, DevOps, solution architecture, engineering, and support background, I operate at the
-        intersection of Enterprise Architecture, platform strategy, and large-scale transformation across Azure and AWS environments.
+        With 14 years of experience in cloud, DevOps, solution architecture, engineering, and support background,
+        I operate at the intersection of Enterprise Architecture, platform strategy, and large-scale transformation
+        across Azure and AWS environments.
       </p>
     </section>
 
@@ -224,32 +256,67 @@
   </main>
 
   <script>
-    // Persisted theme toggle with system preference as default
-    (function(){
-      const STORAGE_KEY = 'site-theme';
+    // =========================================================
+    // Robust theme controller that always honors user clicks
+    // =========================================================
+    (function () {
+      const STORAGE_KEY = 'site-theme';          // 'light' | 'dark' | null (follow system)
+      const USER_LOCK   = 'site-theme-userlock'; // 'true' once user clicks (stops following OS)
       const btn = document.getElementById('themeToggle');
+      const root = document.documentElement;
 
-      function applyTheme(theme){
-        document.body.classList.toggle('dark', theme === 'dark');
-        btn.setAttribute('aria-pressed', theme === 'dark');
-        btn.textContent = theme === 'dark' ? '☀️' : '🌙';
+      function prefersDark(){
+        return window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
       }
 
-      const stored = localStorage.getItem(STORAGE_KEY);
-      const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-      const initialTheme = stored || (prefersDark ? 'dark' : 'light');
-      applyTheme(initialTheme);
+      function apply(theme){
+        root.classList.remove('theme-light', 'theme-dark');
+        if (theme === 'dark') {
+          root.classList.add('theme-dark');
+          btn.setAttribute('aria-pressed', 'true');
+          btn.textContent = '☀️';
+          btn.title = 'Switch to light mode';
+        } else if (theme === 'light') {
+          root.classList.add('theme-light');
+          btn.setAttribute('aria-pressed', 'false');
+          btn.textContent = '🌙';
+          btn.title = 'Switch to dark mode';
+        } else {
+          // follow system: remove classes so media query drives tokens
+          btn.textContent = prefersDark() ? '☀️' : '🌙';
+          btn.setAttribute('aria-pressed', prefersDark() ? 'true' : 'false');
+        }
+      }
 
+      // Init
+      const stored = localStorage.getItem(STORAGE_KEY);           // 'light' | 'dark' | null
+      const locked = localStorage.getItem(USER_LOCK) === 'true';
+      apply(stored || null);
+
+      // React to OS changes only if not user-locked AND no explicit stored theme
+      if (!locked && window.matchMedia) {
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', e => {
+          if (!localStorage.getItem(USER_LOCK) && !localStorage.getItem(STORAGE_KEY)) {
+            apply(null);
+          }
+        });
+      }
+
+      // Toggle button behavior
       btn.addEventListener('click', () => {
-        const next = document.body.classList.contains('dark') ? 'light' : 'dark';
+        const isDark = root.classList.contains('theme-dark') || (!root.classList.contains('theme-light') && prefersDark());
+        const next = isDark ? 'light' : 'dark';
         localStorage.setItem(STORAGE_KEY, next);
-        applyTheme(next);
+        localStorage.setItem(USER_LOCK, 'true');
+        apply(next);
       });
 
-      if (!stored && window.matchMedia) {
-        window.matchMedia('(prefers-color-scheme: dark)')
-          .addEventListener('change', e => applyTheme(e.matches ? 'dark' : 'light'));
-      }
+      // Optional: expose a reset to follow system again
+      // window.resetThemeToSystem = function(){
+      //   localStorage.removeItem(STORAGE_KEY);
+      //   localStorage.removeItem(USER_LOCK);
+      //   apply(null);
+      // };
     })();
   </script>
 </body>
